--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
             android:label="@string/title_activity_maps" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
+                <action android:name="com.nttdocomo.android.HOVER" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
