--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,15 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    signingConfigs {
+        debug{
+            // debug.keystore location and pass
+            storeFile file("../keystore/debug_mapRotation.keystore")
+            storePassword "android"
+            keyAlias "androiddebugkey"
+            keyPassword "android"
+        }
+    }
 }
 
 dependencies {
